frontend/src/global.css
@font-face {
  font-family: 'Inter';
  src:
    local('Inter'),
    url('./fonts/Inter/Inter-VariableFont_slnt,wght.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  src:
    local('Montserrat'),
    url('./fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
  font-weight: medium;
}

@font-face {
  font-family: 'Jost';
  src:
    local('Jost'),
    url('./fonts/Jost/Jost-Medium.ttf') format('truetype');
  font-weight: medium;
}

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  text-decoration: none;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

html {
  scrollbar-gutter: stable;
}

body {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;

  background-color: #ffffff;
}

a {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 500;
  font-size: 18px;
  line-height: 22px;
  color: #000000;
}

button {
  padding: 0;
  background: none;
  border: none;
  cursor: pointer;

  font-family: 'Inter';
  font-style: normal;
  font-weight: 500;
  font-size: 18px;
  line-height: 22px;
  color: #000000;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

main {
  flex-grow: 1;
}

#root {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

